--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
 - 2.1.2
+env:
+- AFID=131cef76.deb3ed6a.131cef77.7335f681 APPID=1087613418612509182
 deploy:
   provider: heroku
   api_key:
