--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,9 @@ deploy:
   on:
     repo: ryuichiueda/sinatra_enpit
     branch: travis
+
+addons:
+  postgresql: "9.3"
+before_script:
+- psql -c 'create database travis_ci_test;' -U postgres
+- cp config/database.yml.travis config/database.yml
